# makeNGSnake

./: README.md  Snakefile.py  Snakefile2.py
BSseq_pipeline/: README.md  Snakemake.py  config.json  config.json.in  configure.ac  guix.scm  my_config2.json  my_snakefile2.py
BSseq_pipeline/rules/: alignment.py  trimming.py
